"fix: вернул прежнюю версию EventServiceImpl"